# checkers

./: .gitignore  .replit  README.md  checkers.py  main.py  pyproject.toml
play_checkers/: __main__.py  play.py
